objects/Ptnr_Onbd_Fmwk__Onboarding__c.object
<CustomObject>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Classification__c</fullName>
        <description>Can be used to classify plans</description>
        <label>Levels</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Ptnr_Onbd_Fmwk__Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ptnr_Onbd_Fmwk__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Onboarding Template</label>
    <listViews>
        <fullName>Ptnr_Onbd_Fmwk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Onboarding Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>